# DevHelper

./: CMakeLists.txt  conanfile.txt
src/: IUpdatable.h  Puller.h  Pusher.cpp  Pusher.h  global.cpp  global.h  main.cpp
